♻️ refactor: change from GetListByID to GetListByUserID
