# api/swagger.yaml
@@ -111,7 +111,7 @@ definitions:
       success_message:
         type: string
     type: object
-  usecases.GetListByIDOutputDTO:
+  usecases.GetListByUserIDOutputDTO:
     properties:
       list:
         $ref: '#/definitions/entities.List'
@@ -227,7 +227,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/usecases.GetListByIDOutputDTO'
+            $ref: '#/definitions/usecases.GetListByUserIDOutputDTO'
         "400":
           description: Bad Request
           schema:
