# internal/interface/handlers/list_handler.go
@@ -115,13 +115,13 @@ func (h *ListHandler) AddMoviesList(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param list_id query string true "List id"
-// @Success 201 {object} usecases.GetListByIDOutputDTO
+// @Success 201 {object} usecases.GetListByUserIDOutputDTO
 // @Failure 400 {object} util.ProblemDetails "Bad Request"
 // @Failure 500 {object} util.ProblemDetails "Internal Server Error"
 // @Failure 401 {object} util.ProblemDetails "Unauthorized"
 // @Security BearerAuth
 // @Router /lists [get]
-func (h *ListHandler) GetListByID(c *gin.Context) {
+func (h *ListHandler) GetListByUserID(c *gin.Context) {
 	userID, err := getUserID(c)
 	if err != nil {
 		c.AbortWithStatusJSON(err.Status, gin.H{"error": err})
@@ -130,12 +130,12 @@ func (h *ListHandler) GetListByID(c *gin.Context) {
 
 	listID := c.Query("list_id")
 
-	input := usecases.GetListByIDInputDTO{
+	input := usecases.GetListByUserIDInputDTO{
 		ListID: listID,
 		UserID: userID,
 	}
 
-	output, errs := h.listFactory.GetListByID.Execute(input)
+	output, errs := h.listFactory.GetListByUserID.Execute(input)
 	if len(errs) > 0 {
 		handleErrors(c, errs)
 		return
